refactor(public-api): rename registration failed response
